--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,22 +1,18 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Maven build test
 
 on:
   push:
     branches:
       - f*
-  pull_request:
-    branches:
-      - master
-      - dev
   workflow_dispatch:
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
