--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.wire.bots</groupId>
+            <artifactId>cryptobox</artifactId>
+            <version>0.3.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
